fix alignment on cardback port

--- a/client/src/components/About/style.css
+++ b/client/src/components/About/style.css
@@ -53,7 +53,15 @@
     border:10px double #021a40;
     background-color:#ff0;
   }
-
+.imgHolder:before {
+    content: " ";
+    position: absolute;
+    top:0;
+    left: -50%;
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.1);
+}
 
   @media(max-width:765px){
     .aboutMain {
